@@ -98,6 +98,6 @@ The behavior of a tree item is defined by the tools which are associated to its 
 
 * _Creation Tool_, which is used to create a new Tree Item. A mapping can contain several such tools. They appear in the context menu of the instances of the mapping, if the (optional) _Precondition_ of the tool holds for the instance's target. A creation tool must specify what kind of _Mapping_ it will create. The actual behavior of the creation tool is defined in the tool's body, using all the standard model operations.
 * _Deletion Tool_, used to delete elements. If a mapping does not define explicitly a deletion tool, the default behavior of the _Delete tree item_ operation is to remove the item's semantic _target_ and all _associated elements_ from the semantic model. If you want a specific behavior, you must create a _Deletion tool_ explicitly and describe the behavior in the tool's body. If you want to prevent the deletion of an element, you must create a _Deletion tool_ and set a _Precondition_ to return @false@ for the elements which should not be deleted.
-* _Direct Edit Tool_, used to allow end-users to directly edit the label of a Tree Item (by double-clicking or pressing _F2_ or _Return_ on a Tree Item). It specifies how to interpret the new label value, and which changes to apply to the model element. The _Edit Mask_ element (contained inside the tool) is used to parse the new label's value as entered by the user, and to select part of this label as input variables to the editing action's body. The mask can contain substrings of the form @{N}@ where _N_ is a number. The parts of the new label's value which correspond to these substring will be available as variables named <code>argN</code>. For example, with an edit mask of <code>{0}:{1}</code> and an input string entered by the user of <code>attr : EString</code>, the tool's body would be executed with variables <code>arg0</code> set to <code>attr&#9251;</code> and <code>arg1</code> set to <code>&#9251;EString</code>.
+* _Direct Edit Tool_, used to allow end-users to directly edit the label of a Tree Item by double-clicking or pressing _F2_ or _Return_ on a Tree Item. Note: Since Sirius 7.1.0, the activation conditions are really these ones. Previously, pressing any alphanumeric character key would activate direct editing. You can retrieve the previous behavior by setting the system property @org.eclipse.sirius.ui.restoreBehaviorEnablingDirectEditOnAlphanumericKey@ to true. The direct edit tool specifies how to interpret the new label value, and which changes to apply to the model element. The _Edit Mask_ element (contained inside the tool) is used to parse the new label's value as entered by the user, and to select part of this label as input variables to the editing action's body. The mask can contain substrings of the form @{N}@ where _N_ is a number. The parts of the new label's value which correspond to these substring will be available as variables named <code>argN</code>. For example, with an edit mask of <code>{0}:{1}</code> and an input string entered by the user of <code>attr : EString</code>, the tool's body would be executed with variables <code>arg0</code> set to <code>attr&#9251;</code> and <code>arg1</code> set to <code>&#9251;EString</code>.
 * _Drop Tool_: When defined inside a _Tree Item_ mapping, a _Drop Tool_ specifies what happens when the user drops an element onto an instance of the mapping. The _Drag source_ property indicates whether the tool accepts elements dragged from a tree representation (value _Tree_), from the _Model Explorer_ view (value _Model_), or both. If such a drop is detected and the _Precondition_ evaluates to @true@, then the body of the drop tool is executed, with the @element@ variable pointing to the semantic element being dropped and @newContainer@ the semantic element in which it is dropped (in this case the tree's semantic element).
 * _Pop-up menus_ are used to add new menus and actions to the context menu associated to any Tree Item.
