@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2009 THALES GLOBAL SERVICES.
+ * Copyright (c) 2007, 2022 THALES GLOBAL SERVICES.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -26,6 +26,14 @@ import org.eclipse.swt.SWT;
 public class DTableColumnViewerEditorActivationStrategy extends ColumnViewerEditorActivationStrategy {
 
     /**
+     * Value defined by the system property
+     * "org.eclipse.sirius.ui.enableCreatedElementsConstraintInSelectElementsListener". If true, if the default list of
+     * elements is not empty, the list of elements returned is filtered with the default selected elements. If false,
+     * the value returned by the elementsToSelect expression is considered without the above constraint.
+     */
+    private boolean restoreBehaviorEnablingDirectEditOnAlphanumericKey = Boolean.valueOf(System.getProperty("org.eclipse.sirius.ui.restoreBehaviorEnablingDirectEditOnAlphanumericKey", "false")); //$NON-NLS-1$ //$NON-NLS-2$
+
+    /**
      * Default constructor.
      * 
      * @param viewer
@@ -48,8 +56,12 @@ public class DTableColumnViewerEditorActivationStrategy extends ColumnViewerEdit
             // mouseActivation
             result = result || event.eventType == ColumnViewerEditorActivationEvent.MOUSE_DOUBLE_CLICK_SELECTION;
             // keyboardActivation
-            result = result || event.eventType == ColumnViewerEditorActivationEvent.KEY_PRESSED
-                    && (Character.isLetterOrDigit(event.character) || DTableColumnViewerEditorActivationStrategy.isActivationKey(event));
+            if (restoreBehaviorEnablingDirectEditOnAlphanumericKey) {
+                result = result || event.eventType == ColumnViewerEditorActivationEvent.KEY_PRESSED
+                        && (Character.isLetterOrDigit(event.character) || DTableColumnViewerEditorActivationStrategy.isActivationKey(event));
+            } else {
+                result = result || event.eventType == ColumnViewerEditorActivationEvent.KEY_PRESSED && DTableColumnViewerEditorActivationStrategy.isActivationKey(event);
+            }
             // otherActivations
             result = result || event.eventType == ColumnViewerEditorActivationEvent.PROGRAMMATIC || event.eventType == ColumnViewerEditorActivationEvent.TRAVERSAL;
         }
@@ -57,8 +69,7 @@ public class DTableColumnViewerEditorActivationStrategy extends ColumnViewerEdit
     }
 
     /**
-     * Check if the event corresponds to an activation key (space, F2 and
-     * Enter).
+     * Check if the event corresponds to an activation key (space, F2 and Enter).
      * 
      * @param event
      *            The event to check
